objects/LLC_BI__Spread_Statement_Type__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Allow_Record_Filtering__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. It is populated through the Salesforce layout. When enabled, spread statement records (chart of accounts) can be filtered when a group header is clicked on. When disabled, the filter does not appear. By default, this is disabled.</description>
        <inlineHelpText>If checked, a search box is showed for every grid allowing row contents to be filtered.</inlineHelpText>
        <label>Allow Record Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balance_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated through the Salesforce layout. When enabled, the system will determine whether each period&apos;s specified spread statement record total (group total) is equal to 0. It will display &quot;balanced&quot; if it is, and &quot;unbalanced!&quot; if not. When disabled, nothing occurs. It is disabled by default.</description>
        <inlineHelpText>Determines whether or not to balance the  total columns. If columns are grouped then the grouped columns will be balanced otherwise the columns themselves will be balanced. If the total is equal to zero it is considered balanced.</inlineHelpText>
        <label>Balance Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_Type__c</fullName>
        <description>This field is currently not being used</description>
        <label>Borrower Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Limited Guarantor</fullName>
                </value>
                <value>
                    <fullName>Co-Borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Bundle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required and automatically updated. The Underwriting Bundle to which this object is related.</description>
        <inlineHelpText>The Underwriting Bundle to which this object is related.</inlineHelpText>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Underwriting_Bundle__c.LLC_BI__Is_Template__c</field>
                <operation>equals</operation>
                <valueField>$Source.LLC_BI__Is_Template__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Spread Statements</relationshipLabel>
        <relationshipName>Spread_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calc_Common_Sizing_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically updated. The Spread_Statement_Record__c used as the divisor when calculating common sizing.</description>
        <label>Calc Common Sizing Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Spread Statement Templates</relationshipLabel>
        <relationshipName>Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calc_Common_Sizing_Total_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is user updated. The value to use as the denominator when calculating common sizing.</description>
        <label>Calc Common Sizing Total Group</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Statement Templates (Calc Common Sizing Total Group)</relationshipLabel>
        <relationshipName>Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is populated through the Salesforce layout. This text is only displayed when looking at a spread statement template record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Common_Sizing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is driven by user selection within the spreading application. When enabled, common sizing columns are displayed for the spread statement. When disabled, the common sizing columns are not displayed. By default, this is disabled.</description>
        <label>Display Common Sizing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Projection_Drivers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. This field controls the visibility of the Driver column for Projections on the Balance Sheet, Income Statement and NOI Statement.</description>
        <label>Display Projection Drivers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Trend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. User updated. This field controls the visibility of the Trend column on the Balance Sheet and Income Statement.</description>
        <inlineHelpText>This field controls the visibility of the Trend column on the Balance Sheet and Income Statement.</inlineHelpText>
        <label>Display Trend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date_Quarter__c</fullName>
        <description>This field is currently not being used</description>
        <formula>If(Month(LLC_BI__End_Date__c) &lt;= 3, 1, IF(Month(LLC_BI__End_Date__c) &lt;= 6, 2, IF(Month(LLC_BI__End_Date__c) &lt;= 9, 3,4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is currently not being used</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity_Type__c</fullName>
        <description>This field is optional and manually updated. If set, the entity type associated with the account is used as criteria for template selection.</description>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                    <default>true</default>
                    <label>Sole Proprietorship</label>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership (LLP)</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Nonprofit Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company (LLC)</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Guardianship</fullName>
                </value>
                <value>
                    <fullName>Municipality / Other Public Entity</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer - Direct</fullName>
                </value>
                <value>
                    <fullName>Customer - Channel</fullName>
                </value>
                <value>
                    <fullName>Channel Partner / Reseller</fullName>
                </value>
                <value>
                    <fullName>Installation Partner</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Operating Company</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Group_Columns__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. It is populated through the Salesforce layout. This field must be enabled for &quot;LLC_BI__Balance_Total__c&quot; to work. It is no longer used outside of this. It is disabled by default.</description>
        <inlineHelpText>Determines whether or not the columns for the template should be grouped. I.e. Months into quarters and quarters into years.</inlineHelpText>
        <label>Group Columns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interaction__c</fullName>
        <description>Deprecated. All spread statements use keyboard interaction.</description>
        <inlineHelpText>The method used for interacting with the spread statement.</inlineHelpText>
        <label>-D Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>click</fullName>
                </value>
                <value>
                    <fullName>dblclick</fullName>
                </value>
                <value>
                    <fullName>keyboard</fullName>
                    <default>true</default>
                    <label>keyboard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Balance_Sheet__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Balance Sheet&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Balance Sheet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Budget__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Budget&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Cash_Flow_Statement__c</fullName>
        <description>Cash Flow Statement replaced with Traditional Cash Flow and UCA Cash Flow</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-D Is Cash Flow Statement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Global_Analysis__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Global Analysis&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Global Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Income_Statement__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Income Statement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Personal_Financial_Statement__c</fullName>
        <description>This field is used to mark the Personal Financial Statement.  When true, the changes to Periods on the Spread Statement will be made independently of other statements.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Personal Financial Statement&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Personal Financial Statement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Ratios__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Ratios&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Ratios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is required. It must be manually populated. When enabled, the spread statement type is treated as a template and can be used to clone additional spread statement types. When disabled, it cannot be used to clone additional spread statement types. If its parent &quot;LLC_BI__Underwriting_Bundle__c&quot; is marked as a template, then the spread statement type is also a template. By default, this is disabled.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Traditional_Cash_Flow__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Traditional Cash Flow&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Traditional Cash Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_UCA_Cash_Flow__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;UCA Cash Flow&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is UCA Cash Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Spread Statement Templates</relationshipLabel>
        <relationshipName>Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Product Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product_Type__c.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Spread Statement Templates</relationshipLabel>
        <relationshipName>Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Type__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Spread Statement Templates</relationshipLabel>
        <relationshipName>Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field is required and automatically updated. The order for displaying the statements in the navigation bar when underwriting.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system auto-populates this optional lookup field with the id of the cloned Statement from the Spreads Statement Template template.</description>
        <label>Source Statement</label>
        <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
        <relationshipLabel>Cloned Spread Statement Templates</relationshipLabel>
        <relationshipName>Cloned_Spread_Statement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Total_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Spread Statement Total Group</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Statement Templates</relationshipLabel>
        <relationshipName>Spread_Statement_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date_Quarter__c</fullName>
        <description>This field is currently not being used</description>
        <formula>If(Month(LLC_BI__Start_Date__c) &lt;= 3, 1, IF(Month(LLC_BI__Start_Date__c) &lt;= 6, 2, IF(Month(LLC_BI__Start_Date__c) &lt;= 9, 3,4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>This field is currently not being used</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Static_Periods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. If set then periods cannot be added after the initial creation of the statement.</description>
        <label>Static Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Supports_Common_Sizing__c</fullName>
        <description>This field is optional. It is automatically populated via a formula. It determines which spread statement types allow the user to enable common sizing. When enabled, the spread statement supports common sizing. Income Statement and Balance Sheet are the only spread statements which have this enabled.</description>
        <formula>OR(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),ISPICKVAL(LLC_BI__Type__c, &apos;Balance Sheet&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supports Common Sizing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Supports_Trend__c</fullName>
        <description>This defaults to false. Does this statement type support trend.</description>
        <formula>OR(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),ISPICKVAL(LLC_BI__Type__c, &apos;Balance Sheet&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Does this statement type support trend.</inlineHelpText>
        <label>Supports_Trend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Hide_Currency_Symbol__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. Controls display of the currency symbol on the Total Record Group that is automatically created for this Spread Statement Template.</description>
        <inlineHelpText>Controls display of the currency symbol on the Total Record Group that is automatically created for this Spread Statement Template</inlineHelpText>
        <label>Total Hide Currency Symbol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Row_Name__c</fullName>
        <description>This field is optional. It is populated through the Salesforce layout. This field allows you to specify the spread statement record total (group total) that &quot;LLC_BI__Balance_Total__c&quot; should be used with.</description>
        <label>Total Row Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is required.  The selected value will be displayed as the name of the Spread Statement.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Statement</fullName>
                </value>
                <value>
                    <fullName>Personal Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Reconciliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Statement Template</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Type__c</columns>
        <columns>LLC_BI__Total_Row_Name__c</columns>
        <columns>LLC_BI__Is_Template__c</columns>
        <columns>LLC_BI__Interaction__c</columns>
        <columns>LLC_BI__Is_Balance_Sheet__c</columns>
        <columns>LLC_BI__Is_Cash_Flow_Statement__c</columns>
        <columns>LLC_BI__Is_Income_Statement__c</columns>
        <columns>LLC_BI__Is_Personal_Financial_Statement__c</columns>
        <columns>LLC_BI__Is_Budget__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Group_Columns__c</columns>
        <columns>LLC_BI__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Is_Template__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>